--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "prettier": "^2.8.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
   },
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "lint": "prettier --write ."
   }
 }
